2013-06-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Config.pm,
	lib/PandoraFMS/Core.pm,
	conf/pandora_server.conf.new,
	FreeBSD/pandora_server.conf: added eMail option that make
	alerts shared by all destinations (delivering in separate
	mail is default as in the prior versions).

	Merged from trunk.

2013-06-14  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl,
	  lib/PandoraFMS/DB.pm: Backported the lock feature from 5.0.

2013-06-13  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Disabled locks (5.0 feature).

2013-06-13  Sancho Lerena <slerena@artica.es>

	* pandora_server.redhat.spec: Fixed bad paths on perm syntax.

2013-06-12  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Merged from trunk.

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* pandora_server.spec: cleaned source code style.
	
	* pandora_server.redhat.spec: added the directories of collections
	and remote configuration into the list of chmod perms.
	
	Fixes: #2290

2013-06-07  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Merged from 4.0 branch. Remove PERL libs
	  when uninstalling.

2013-06-06  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/DataServer.pm: Removed redundant log messages.

	* lib/PandoraFMS/ReconServer.pm: Create agents before trying to assign
	  addresses. Small fixes.

2013-05-29  Dario Rodriguez <dario@artica.es>

	* util/plugin/wmi_remote.pl,
	util/plugin/snmp_remote.pl: New plugins to monitor servers
	remotely using wmi and snmp.

2013-05-23  Sancho Lerena <slerena@artica.es>
	
	* util/pandora_logrotate: Fixed several problems due rotation.
	Now there is no need to restart any process, much safer.
	Added correct paths for pandora console log on centos and debian.

2013-05-22  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/make_deb_package.sh: Removed a touch that left a newly
	  installed server with an empty configuration file.

2013-05-22  Sancho Lerena <slerena@artica.es>
